tests/assignment/grouping.tox
fn main() {
    let a = "a";
    (a) = "value"; // error: Not a valid assingment target
}